dernier commit du backend avec l auth et recup mot de passe

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^2.0.2",
     "node-cron": "^3.0.3",
     "node-fetch": "2",
+    "node-mailjet": "^6.0.9",
     "nodemailer": "^6.10.0",
     "uid2": "^1.0.0"
   }
