--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "backend",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "start": "node ./bin/www"
   },
@@ -19,7 +22,6 @@
     "i18next": "^25.2.1",
     "i18next-fs-backend": "^2.6.0",
     "i18next-http-middleware": "^3.7.4",
-    "jest": "^29.7.0",
     "mongoose": "^8.9.5",
     "morgan": "~1.9.1",
     "multer": "^2.0.2",
@@ -28,5 +30,8 @@
     "node-mailjet": "^6.0.9",
     "nodemailer": "^6.10.0",
     "uid2": "^1.0.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
