--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-fetch": "2",
     "node-mailjet": "^6.0.9",
     "nodemailer": "^6.10.0",
+    "sharp": "^0.34.3",
     "uid2": "^1.0.0"
   },
   "devDependencies": {
