--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
