resolution du probleme de decalage de notification cron

--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "date-fns": "^4.1.0",
-    "date-fns-tz": "^3.2.0",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "expo-server-sdk": "^3.14.0",
@@ -24,6 +22,7 @@
     "i18next": "^25.2.1",
     "i18next-fs-backend": "^2.6.0",
     "i18next-http-middleware": "^3.7.4",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.9.5",
     "morgan": "~1.9.1",
     "multer": "^2.0.2",
